connected pages and finalized styling for landing page. set background and got all of the structural components in place.

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Extended+Text&family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/72dd7ad3ec.js" crossorigin="anonymous"></script>
     <title>Raleigh Chesney's Portfolio</title>
   </head>
   <body>
